# fast_zero

./: pyproject.toml
fast_zero1/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 1508077843be_create_users_table.py  eb1a4ed39640_add_updated_at_to_user.py
tests/: conftest.py  test_app.py  teste_db.py
